# test-app-porfolio

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.local.yml
.github/workflows/: cicd.yml
backend/: .dockerignore  Dockerfile  Makefile  pyproject.toml
backend/src/core/: utils.py
backend/src/core/application/: __init__.py  factory.py  openapi.py
backend/src/core/broker/: __init__.py
backend/src/core/db/: models.py  utils.py
backend/src/core/errors/: __init__.py  exceptions.py  handlers.py
backend/src/core/middlewares/: __init__.py  context.py  query_params.py  response_time.py
backend/src/core/pagination/: __init__.py  query.py  response.py
backend/src/core/scheduler/: __init__.py
backend/src/core/schemas/: __init__.py  base.py  params.py  response.py  utils.py
backend/src/server/: api.py  asgi.py
backend/src/server/settings/: __init__.py  _dantic.py  base.py
backend/src/social_media/: admin.py  models.py  registry.py
backend/src/social_media/api/: messages.py  routers.py  schemas.py
backend/src/social_media/migrations/: 0001_initial.py  0002_remove_account_accounts_social__2f66b2_idx_and_more.py  0003_alter_account_id.py  0004_remove_account_store_at.py  0005_tag_slug_alter_post_id_alter_tag_id_alter_tag_title_and_more.py  0006_alter_tag_slug.py  0007_alter_tracking_account.py  0008_alter_tracking_options.py  0009_rename_tracking_usersubscription_and_more.py  0010_remove_tag_slug.py  0011_alter_usersubscription_account_and_more.py  0012_rename_accounts_provide_8eca86_idx_social_medi_provide_112cf6_idx_and_more.py  0013_alter_usersubscription_account.py  0014_alter_tag_table.py  0015_usersubscription_social_medi_account_61cf72_idx.py  0016_post_provider_uid.py  0017_rename_provider_uid_post_uid_and_more.py  0018_alter_usersubscription_follow_tags.py
backend/src/users/: admin.py  models.py  registry.py
backend/src/users/api/: exceptions.py  routers.py  schemas.py
backend/src/users/api/auth/: security.py
backend/src/users/migrations/: 0001_initial.py  0002_tokenblacklist.py  0003_telegramaccount.py
bot/: Makefile  pyproject.toml
bot/src/: main.py
bot/src/core/: logger.py
get_location/: main.py
workers/instagram/: Dockerfile  Makefile  pyproject.toml
workers/instagram/src/: main.py  parser.py
workers/instagram/src/core/: crawler.py  log.py  parser.py  spider.py
workers/instagram/src/pipelines/: save_posts.py
